@@ -6,6 +6,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
+import org.springframework.web.client.RestClient;
 import org.springframework.web.reactive.function.client.WebClient;
 import reactor.core.publisher.Mono;
 import ru.iguana.gateway.api.dto.LoanStatementRequestDto;
@@ -17,59 +18,38 @@ import java.util.stream.StreamSupport;
 @Service
 @Slf4j
 public class RequestToStatementService {
-    private final WebClient webClient;
 
-    public RequestToStatementService(@Autowired
-                                     @Qualifier("statementWebClient")
-                                     WebClient webClient){
-        this.webClient = webClient;
+    private final RestClient restClient;
+
+    public RequestToStatementService(@Qualifier("statementRestClient") RestClient restClient) {
+        this.restClient = restClient;
     }
 
-    public Mono<List<JsonNode>> getLoanOffer(LoanStatementRequestDto request) {
-        log.info("Received request for getLoanOfferList");
-        log.debug("Received request for getLoanOfferList: {}", request);
-        return fetchLoanOffers(request)
-                .doOnSuccess(response -> log.info("Response for getLoanOfferList: {}", response))
-                .doOnError(error -> log.error("Error in getLoanOfferList: {}", error.getMessage(), error));
-    }
-
-    public ResponseEntity<Void> selectOffer(JsonNode request) {
-        log.info("Received request for selectOffer: {}", request);
-        sendOffer(request);
-        log.info("Completed processing selectOffer");
-        return ResponseEntity.ok().build();
-    }
-
-    private void sendOffer(JsonNode request) {
-        log.info("Sending offer request to external service: {}", request);
-        webClient.post()
-                .uri("/statement/offer")
-                .bodyValue(request)
-                .retrieve()
-                .bodyToMono(Void.class)
-                .doOnSuccess(response -> log.info("Successfully sent offer request: {}", request))
-                .doOnError(error -> log.error("Error occurred while sending offer request: {}", error.getMessage(), error))
-                .block();
-    }
-
-    private Mono<List<JsonNode>> fetchLoanOffers(LoanStatementRequestDto request) {
-        log.info("Fetching loan offers with request");
-        log.debug("Fetching loan offers with request: {}", request);
-        return webClient.post()
+    public List<JsonNode> getLoanOffer(LoanStatementRequestDto request) {
+        log.info("Fetching loan offers with request: {}", request);
+        JsonNode response = restClient.post()
                 .uri("/statement")
-                .bodyValue(request)
+                .body(request)
                 .retrieve()
-                .bodyToMono(JsonNode.class)
-                .flatMap(response -> {
-                    if (response != null && response.isArray()) {
-                        List<JsonNode> list = StreamSupport.stream(response.spliterator(), false)
-                                .collect(Collectors.toList());
-                        log.info("Successfully fetched and processed loan offers: {}", list);
-                        return Mono.just(list);
-                    } else {
-                        log.error("Invalid response structure: expected JSON array, got: {}", response);
-                        return Mono.error(new IllegalStateException("Invalid response structure: expected JSON array"));
-                    }
-                });
+                .body(JsonNode.class);
+
+        if (response != null && response.isArray()) {
+            List<JsonNode> offers = StreamSupport.stream(response.spliterator(), false).toList();
+            log.info("Successfully fetched loan offers: {}", offers);
+            return offers;
+        } else {
+            log.error("Invalid response structure: expected array, got: {}", response);
+            throw new IllegalStateException("Invalid response: expected array");
+        }
+    }
+
+    public void selectOffer(JsonNode request) {
+        log.info("Sending selected offer: {}", request);
+        restClient.post()
+                .uri("/statement/offer")
+                .body(request)
+                .retrieve()
+                .toBodilessEntity();
+        log.info("Successfully sent selected offer.");
     }
 }
